--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./public/favicon.ico" />
+    <link rel="icon" href="/favicon.ico" />
+		<link href="src/App.css" rel="stylesheet" > 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Arı Makina</title>
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
